	PR c++/10180 	* tree-inline.c (expand_call_inline): Call push_srcloc when 	encountering EXPR_WITH_FILE_LOCATION.  Honor warn_inline.

PR c++/10180
	* g++.dg/warn/Winline-1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@66202 138bc75d-0d04-0410-961f-82ee72b054a4